--- a/carpool/templates/includes/projects.html
+++ b/carpool/templates/includes/projects.html
@@ -10,8 +10,8 @@
 			<div class="container-fluid px-md-0">
 				<div class="row no-gutters">
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/1.jfif);">
-            	<a href="static/images/1.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p1.jpeg);">
+            	<a href="static/images/p1.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -23,8 +23,8 @@
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/2.jfif);">
-            	<a href="static/images/2.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p2.jpeg);">
+            	<a href="static/images/p2.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -36,8 +36,8 @@
             </div>
           </div>
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/3.jfif);">
-            	<a href="static/images/3.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p3.jpeg);">
+            	<a href="static/images/p3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -50,8 +50,8 @@
           </div>
 
 		  <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/3.jfif);">
-            	<a href="static/images/3.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p4.jpeg);">
+            	<a href="static/images/p4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -64,8 +64,8 @@
           </div>
 
           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
-            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p5.jpeg);">
+            	<a href="static/images/p5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -77,8 +77,8 @@
             </div>
           </div>
 		         <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
-            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p6.jpeg);">
+            	<a href="static/images/p6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -90,8 +90,8 @@
             </div>
           </div>
 		           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
-            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p7.jpeg);">
+            	<a href="static/images/p7.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -103,8 +103,8 @@
             </div>
           </div>
 		           <div class="col-md-3 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(static/images/4.jfif);">
-            	<a href="static/images/4.jfif" class="icon image-popup d-flex justify-content-center align-items-center">
+            <div class="work img d-flex align-items-end" style="background-image: url(static/images/p9.jpeg);">
+            	<a href="static/images/p9.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="fa fa-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
