--- a/carpool/templates/gallery.html
+++ b/carpool/templates/gallery.html
@@ -32,13 +32,12 @@
 	      </button>
 				<form action="#" class="searchform order-lg-last">
           <div class="form-group d-flex">
-            <input type="text" class="form-control pl-3" placeholder="Search">
-            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
+      
           </div>
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav mr-auto">
-	        		<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
+	      <ul class="navbar-nav mr-auto">
+	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
 	        	<li class="nav-item active"><a href="/gallery" class="nav-link">Gallery</a></li>
 			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
@@ -46,15 +45,17 @@
             <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
             {%if user == "praneethjshetty" %}
             <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
+            <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
             {% else%}
 	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
+            
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/bg_2.jpeg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/bg_21.jpeg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
