--- a/carpool/templates/includes/gallery.html
+++ b/carpool/templates/includes/gallery.html
@@ -14,13 +14,10 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    	<span > <img src="static/images/1.jfif" height="300px" width="200px"></img></span>
+                    	<span > <img src="static/images/2.jpg" height="300px" width="200px"></img></span>
                     <div class="d-flex align-items-center">
                     
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
+                    
 	                  </div>
                   </div>
                 </div>
@@ -29,13 +26,10 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    	<span > <img src="static/images/2.jfif" height="300px" width="200px"></img></span>
+                    	<span > <img src="static/images/1.jpeg" height="300px" width="200px"></img></span>
                     <div class="d-flex align-items-center">
                     
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
+                    
 	                  </div>
                   </div>
                 </div>
@@ -44,13 +38,10 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    	<span > <img src="static/images/3.jfif" height="300px" width="200px"></img></span>
+                    	<span > <img src="static/images/p8.jpeg" height="300px" width="200px"></img></span>
                     <div class="d-flex align-items-center">
                     
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
+                    
 	                  </div>
                   </div>
                 </div>
@@ -59,13 +50,10 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    	<span > <img src="static/images/4.jfif" height="300px" width="200px"></img></span>
+                    	<span > <img src="static/images/p7.jpeg" height="300px" width="200px"></img></span>
                     <div class="d-flex align-items-center">
                     
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
+                    
 	                  </div>
                   </div>
                 </div>
@@ -74,13 +62,10 @@
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    	<span > <img src="static/images/5.jfif" height="300px" width="200px"></img></span>
+                    	<span > <img src="static/images/p6.jpeg" height="300px" width="200px"></img></span>
                     <div class="d-flex align-items-center">
                     
-                    	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
-		                  </div>
+                   
 	                  </div>
                   </div>
                 </div>
