--- a/carpool/templates/userprofile.html
+++ b/carpool/templates/userprofile.html
@@ -40,24 +40,25 @@ html {
 	      </button>
 				<form action="" class="searchform order-lg-last">
           <div class="form-group d-flex">
-            <input type="text" class="form-control pl-3" placeholder="Search">
-            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
+         
           </div>
             
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav mr-auto">
-	        <li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
+	       <ul class="navbar-nav mr-auto">
+	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
 	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
-			    	<li class="nav-item "><a href="/services" class="nav-link">Services</a></li>
+			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="/project" class="nav-link">Project</a></li>
             <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
             {%if user == "praneethjshetty" %}
             <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
+            <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
             {% else%}
 	        	<li class="nav-item active"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
+            
 	        </ul>
 	      </div>
 	    </div>
