--- a/carpool/templates/includes/profile.html
+++ b/carpool/templates/includes/profile.html
@@ -131,13 +131,19 @@
 					        		<div class="text pl-3">
 						            <p><span>Register No :</span> <a href="#">{{uinfo.regno}}</a></p>
 						          </div>
-			          </div>
+			                    </div>
+							  
                            {% endfor%}
+						   		<div class="d-flex justify-content-center ">
+								 <a href="/edituser" class="btn btn-dark"  ><b>Edit</b>	</a>
+							   					
 								</div>
+						
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
+					 	
 				</div>
     	</div>
     </section>
