--- a/carpool/templates/Signup.html
+++ b/carpool/templates/Signup.html
@@ -244,7 +244,7 @@
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
-								  <input class="btn login_btn"  type="Submit" name="submit" value="Submit"/>
+								  <input class="btn btn-dark"  type="Submit" name="submit" value="Submit"/>
 				   			</div>
 					</form>
 
