--- a/carpool/templates/forgetpass.html
+++ b/carpool/templates/forgetpass.html
@@ -49,7 +49,7 @@
 		}
 
 		.form_container {
-			margin-top: 2px;
+			margin-top: 22px;
 		}
 
 		#form-title{
@@ -110,7 +110,7 @@
 		
 	      <div class="collapse navbar-collapse " id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        		<li class="nav-item "><a href="/bindex" class="nav-link" >Home</a></li>
+	        		<li class="nav-item "><a href="/login" class="nav-link" >Login</a></li>
 	        		<li class="nav-item "><a href="/Signup" class="nav-link" >Signup</a></li>
 				
 	        </ul>
@@ -125,52 +125,38 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-
+	<br>
 <script src="static/js/sweetalert.min.js"></script>
-		<br><br>
-					<h3 id="form-title">LOGIN</h3>
-				</div>
+		<br>
+					<h3 id="form-title">FORGOT PASSWORD</h3>
+				</div><br>
 				{% if msg == "0" %}
 					<script> swal("Oops !","Incorrect username/password!", "error"); </script>
-			
+				{% elif msg == "1" %}
+					<script> swal("Email Sent please Check !","A Email with account detail has been sent to {{email}}", "success"); </script>
+				{% elif msg == "2" %}
+					<script> swal("Oops !","The Email you provided Did not match with any accounts", "error"); </script>
 
 				{% endif %}
 				
 				<div class="d-flex justify-content-center form_container">
-					<form method="POST" action="/logins">
+					<form method="POST" action="/forgotpassword">
                             {% csrf_token %}
 						<div class="input-group mb-3  mm !important">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" name="username" placeholder="Username..." class="form-control" required>
-						</div>
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-								<input type="password" name="password" placeholder="Password..." class="form-control" required >
-						</div>
-
-							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn btn-dark" type="submit" value="Login">
+							<input type="text" name="username" placeholder="Enter The Email Address" class="form-control" required>
+						</div><br>
+						<div class="d-flex justify-content-center mt-3 login_container">
+				 				<input class="btn login_btn" type="submit" value="Send">
 				   			</div>
+							   <br><br>
 					</form>
 
 				</div>
 		
-				<div class="mt-3">
-					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="/Signup" class="ml-1" >Sign Up</a>
-					
-					</div>
-			
-				</div>
-				<div class="mt-2">
-						<div class="d-flex justify-content-center ">
-						 <a href="/forgetpass"  ><b>Forgot Password</b>	</a>
-						<br><br>
-					</div>
+				
 			
 				</div>
 			</div>
