--- a/carpool/templates/bindex.html
+++ b/carpool/templates/bindex.html
@@ -60,7 +60,7 @@
 
     {% include 'includes/projects.html' %}
 
-	  {% include 'includes/blog.html' %}
+	  <!--{% include 'includes/blog.html' %} -->
    
     {% include 'includes/footerl.html' %}
   
