--- a/carpool/templates/includes/experience.html
+++ b/carpool/templates/includes/experience.html
@@ -11,10 +11,15 @@
     			<div class="col-md-6 pl-md-5">
     				<div class="row justify-content-start py-5">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<span class="subheading">Welcome to Autorepair</span>
-		            <h2 class="mb-4">We help more than 45 years serving customer car</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-</p>
+		          	<span class="subheading">Welcome to Car Pool</span>
+		            <h2 class="mb-4">We help more than 45 serving customer car</h2>
+		            <p>(Rub, polish and waxing)                 
+                 Car Washing: The exterior car detailing process begins with an intensive washing using car shampoo.
+Surface Claying:After the washing, the paintwork is then clayed using the clay bar. It removes any of the dirt that didn’t get off with wash.
+Rubbing & Polishing: After cleaning the car in every manner the process of car polishing is performed. The original polish on the paint surface is removed and a new protective wax coat is applied either manually or using machines.
+Paint Sealing: Paint sealing is done to protect the car using purpose-made car sealant or car wax. This is done to restore the brand new showroom shine of the car that it might’ve lost over the years.
+Headlights & Taillights and misc:The headlights, as well as the taillights, are cleaned for better illumination.
+</>
 		            <div class="tabulation-2 mt-4">
 									<ul class="nav nav-pills nav-fill d-md-flex d-block">
 									  <li class="nav-item mb-md-0 mb-2">
@@ -29,13 +34,19 @@
 									</ul>
 									<div class="tab-content rounded mt-2">
 									  <div class="tab-pane container p-0 active" id="home1">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Complete interior cleaning, vacuuming of Interior, Dashboard dusting, Cleaning of Fabric/Leather seats, Cleaning of Foot mats, Cleaning Hinges and Side Doors.</p>
 									  </div>
 									  <div class="tab-pane container p-0 fade" id="home2">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Removing hard water spots from your vehicle body and glass surface. </p>
+				<p>	This is because when the water from a sprinkler system or rain in the city falls on your vehicle, the water contains contaminants.</p><span id="dots3"></span><span id="more3"> 
+				<p>As the water on the surface evaporates away, the contaminants adhere themselves to the paint or windows. Once this occurs, they become extremely difficult to remove. Our Acid Rain and Hard Water Stain Removal service is designed to solve this problem.</p>
 									  </div>
 									  <div class="tab-pane container p-0 fade" id="home3">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Complete interior vacuum which Includes floors, seats, trunk, and all cracks / crevices.</p>
+<p>Shampooing of carpet, seats, and floor mats, Headliner cleaned of spots, splashes, and stains</p><span id="dots2"></span><span id="more2">
+<p>All interior plastic / vinyl, Leather seats cleaned and dressed</p>
+<p>Door jambs, All interior windows cleaned and streak-free</p>
+<p>Interior air freshener added (upon request).</p>
 									  </div>
 									</div>
 								</div>
