--- a/carpool/templates/index.html
+++ b/carpool/templates/index.html
@@ -32,11 +32,27 @@ html {
   position: sticky;  !important
   top: 0;
 }
+.glowss {
+  font-size: 12px;
+  color: black;
+  text-align: center;
+  -webkit-animation: glowss 1s ease-in-out infinite alternate;
+  -moz-animation: glowss 1s ease-in-out infinite alternate;
+  animation: glowss 1s ease-in-out infinite alternate;
+}
 
+@-webkit-keyframes glowss {
+  from {
+    text-shadow: 0 0 1px red, 0 0 2px red, 0 0 3px red, 0 0 4px red, 0 0 5px red, 0 0 6px red, 0 0 7px red;
+  }
+  
+ 
+}
 
 </style>
 
 	</head>
+  
   <body>
 		{% include 'includes/top.html' %}
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -49,8 +65,7 @@ html {
            	{% if msg == "4" %}
 				       	<script> swal("successfully Loged in","Welcome {{ user}}", "success"); </script>
               {% endif %}
-
-       
+          
 	      <div class="collapse navbar-collapse mantop !important" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item active"><a href="/index" class="nav-link">Home</a></li>
@@ -58,10 +73,15 @@ html {
 	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="/project" class="nav-link">Project</a></li>
+             {%if user != "praneethjshetty" %}
             <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+             {% endif %}
+            
             {%if user == "praneethjshetty" %}
             <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
             <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
+            <li class="nav-item"><a href="/Messages" class="nav-link"><b class="glowss">{{msgcount}}</b>&nbsp;&nbsp;Messages</a></li>
+            
             {% else%}
 	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
