--- a/carpool/templates/messages.html
+++ b/carpool/templates/messages.html
@@ -46,7 +46,7 @@ html {
         </form>
 	     <div class="collapse navbar-collapse mantop !important" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
+	        	<li class="nav-item active"><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
 	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
@@ -58,9 +58,9 @@ html {
             {%if user == "praneethjshetty" %}
             <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
             <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
-            <li class="nav-item"><a href="/Messages" class="nav-link">Messages</a></li>
+            <li class="nav-item active"><a href="/Messages" class="nav-link">Messages</a></li>
             {% else%}
-	        	<li class="nav-item active"><a href="/profile" class="nav-link">Profile</a></li>
+	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
             
 	        </ul>
@@ -72,7 +72,7 @@ html {
     
     
     <!--{% include 'includes/blog.html' %}-->
-    {% include 'includes/profileedit.html' %}
+    {% include 'includes/message.html' %}
   
     {% include 'includes/footer.html' %}
   
