--- a/carpool/templates/price.html
+++ b/carpool/templates/price.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <title>Car Pool</title>
-       <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="static/images/carpoollog.jpeg">
     {% load static %}
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="shortcut icon" type="image/x-icon" href="static/images/carpoollog.jpeg">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,28 +21,21 @@
 
     <link rel="stylesheet" href="static/css/flaticon.css">
     <link rel="stylesheet" href="static/css/style.css">
-	<style>
-html {
-  scroll-behavior: smooth;
-}
-</style>
-
-	</head>
+  </head>
   <body>
-		{% include 'includes/top.html' %}
+			{% include 'includes/top.html' %}
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	    
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
 	      </button>
-				<form action="" class="searchform order-lg-last">
+				<form action="#" class="searchform order-lg-last">
           <div class="form-group d-flex">
-         
-          </div>
             
+          </div>
         </form>
-	     <div class="collapse navbar-collapse mantop !important" id="ftco-nav">
+	      <div class="collapse navbar-collapse mantop !important" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
@@ -60,7 +51,7 @@ html {
             <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
             <li class="nav-item"><a href="/Messages" class="nav-link">Messages</a></li>
             {% else%}
-	        	<li class="nav-item active"><a href="/profile" class="nav-link">Profile</a></li>
+	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
             
 	        </ul>
@@ -69,10 +60,21 @@ html {
 	    </div>
 	  </nav>
     <!-- END nav -->
-    
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/bg_1.jpeg');" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text align-items-end">
+          <div class="col-md-9 ftco-animate pb-5">
+          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Services <i class="fa fa-chevron-right"></i></span></p>
+            <h1 class="mb-0 bread">Services</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+       {% include 'includes/service.html' %}
     
     <!--{% include 'includes/blog.html' %}-->
-    {% include 'includes/profileedit.html' %}
   
     {% include 'includes/footer.html' %}
   
