--- a/carpool/templates/project.html
+++ b/carpool/templates/project.html
@@ -37,23 +37,28 @@
        
           </div>
         </form>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
+	     <div class="collapse navbar-collapse mantop !important" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
 	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item active"><a href="/project" class="nav-link">Project</a></li>
+             {%if user != "praneethjshetty" %}
             <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+             {% endif %}
+            
             {%if user == "praneethjshetty" %}
             <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
             <li class="nav-item"><a href="/subscriptions" class="nav-link">Subscriptions</a></li>
+            <li class="nav-item"><a href="/Messages" class="nav-link">Messages</a></li>
             {% else%}
 	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
             
 	        </ul>
 	      </div>
+        
 	    </div>
 	  </nav>
     <!-- END nav -->
